tools/tests/errors/surf_cont_05.ki
# pop from an empty Set
var s = Set()
discard s.pop()
